--- a/src/app/pages/serp/serp-item.component.html
+++ b/src/app/pages/serp/serp-item.component.html
@@ -26,10 +26,8 @@
 			<ng-container *ngIf="item.trustPilot">
 				<div [trustPilot]="item.trustPilot"></div>
 			</ng-container>
-			<button type="button" class="add-to-fav">
-				<svg class="ico">
-					<use xlink:href="#ico-fav"></use>
-				</svg>
+			<button type="button" class="add-to-fav" (click)="wishlist.doToggle(item)" [ngClass]="{ active: wishlist.has(item) }">
+				<svg class="ico"><use xlink:href="#ico-fav"></use></svg>
 			</button>
 		</div>
 		<div class="desc">
