--- a/src/app/sections/main-search/main-search.component.scss
+++ b/src/app/sections/main-search/main-search.component.scss
@@ -193,6 +193,10 @@ Main Search
 		padding-left: 20px;
 		appearance: none;
 
+		&[disabled] {
+			pointer-events: none;
+		}
+
 		&::placeholder {
 			color: $tit-color;
 			opacity: 1;
