--- a/src/app/core/ui/modal/modal.component.html
+++ b/src/app/core/ui/modal/modal.component.html
@@ -1,7 +1,21 @@
 <div class="modal" [ngClass]="{ active: component }">
+	<div class="modal-bg" (click)="doClose()"></div>
 	<div class="modal-page">
-		<ng-container #modalContainer></ng-container>
-		<button class="btn btn-close" (click)="doPrev()" *ngIf="modalCount > 1">prev</button>
-		<button class="btn btn-close" (click)="doClose()">close</button>
+		<div class="modal-header">
+			<button class="modal-prev" (click)="doPrev()" *ngIf="modalCount > 1">
+				<svg class="ico">
+					<use xlink:href="#ico-prev"></use>
+				</svg>
+				indietro
+			</button>
+			<button class="modal-close" (click)="doClose()">
+				<svg class="ico">
+					<use xlink:href="#ico-close"></use>
+				</svg>
+			</button>
+		</div>
+		<div class="modal-content">
+			<ng-container #modalContainer></ng-container>
+		</div>
 	</div>
 </div>
