--- a/src/app/core/ui/modal/modal.component.scss
+++ b/src/app/core/ui/modal/modal.component.scss
@@ -7,7 +7,6 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: rgba(0, 0, 0, 0.7);
 	z-index: 10000;
 	margin: 0;
 	padding: 0;
@@ -15,15 +14,71 @@
 	pointer-events: none;
 	opacity: 0;
 	transition: opacity ease-in-out 250ms;
+
 	&.active {
 		opacity: 1;
 		pointer-events: all;
 	}
 }
 
+.modal-bg {
+	position: fixed;
+	z-index: 0;
+	background: #1e1e1e;
+	opacity: .87;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+}
+
 .modal-page {
+	position: relative;
+	z-index: 1;
 	background: white;
 	min-width: 50vw;
 	min-height: 50vh;
+	max-height: 90vh;
+	max-width: 90vw;
 	box-shadow: 0 10px 40px -5px rgba(0, 0, 0, 0.5);
+	overflow-y: auto;
+
+	@media (max-width: 500px) {
+		max-height: calc(100vh - 65px);
+		margin-top: 10vh;
+	}
+
+	.modal-header {
+
+		.modal-prev {
+			padding: 10px;
+			z-index: 1;
+			color: #5f5d63;
+			display: flex;
+			font-size: 12px;
+			align-items: center;
+
+			.ico {
+				width: 18px;
+				height: 18px;
+				fill: #5f5d63;
+				margin-right: 4px;
+			}
+		}
+
+
+		.modal-close {
+			position: fixed;
+			z-index: 1;
+			right: 10px;
+			top: 10px;
+
+			.ico {
+				fill: #fff;
+				width: 32px;
+				height: 32px;
+			}
+		}
+
+	}
 }
