--- a/src/app/pages/hotel/hotel-datepicker.component.scss
+++ b/src/app/pages/hotel/hotel-datepicker.component.scss
@@ -30,8 +30,11 @@
 }
 
 .popup-calendar {
-	width: 100%;
 	height: 300px;
 	background: white;
-	border: 1px solid $primary-color;
+	box-shadow: 0 3px 7px rgba(0, 0, 0, 0.15);
+	margin-left: -5px;
+	margin-right: -5px;
+	width: auto;
+	border: 1px solid #d8d8d8;
 }
