--- a/src/app/pages/hotel/hotel.component.scss
+++ b/src/app/pages/hotel/hotel.component.scss
@@ -13,9 +13,15 @@ Hotel Page
 	}
 
 	.container {
-		display: flex;
-		justify-content: space-between;
+		position: relative;
+		z-index: 1;
 		margin-bottom: 60px;
+		padding-left: 310px;
+
+		@include xs-down {
+			margin-bottom: 0;
+			padding-left: 0;
+		}
 	}
 }
 
@@ -25,13 +31,15 @@ Hotel Sidebar
 --------------------------------------------------*/
 
 .hotel-sidebar {
-	flex: 0 0 310px;
-	width: 31px;
+	width: 310px;
 	display: block;
 	padding: 0 30px 0 15px;
+	position: absolute;
+	z-index: 10;
+	top: 3px;
+	left: 0;
 
 	.sticky {
-		top: 3px;
 		width: calc(100% + 15px);
 		padding-right: 15px;
 		z-index: 10;
@@ -52,7 +60,11 @@ Hotel Sidebar
 
 
 	@include xs-down {
-		display: none;
+		position: relative;
+		top: auto;
+		left: auto;
+		padding: 0;
+		width: 100%;
 	}
 
 
@@ -61,6 +73,11 @@ Hotel Sidebar
 		border-bottom: 1px solid $border-color;
 		font-size: 13px;
 		line-height: 1.2;
+
+		@include xs-down {
+			padding-left: 0;
+			padding-right: 0;
+		}
 
 		.tit {
 			color: $tit-color;
@@ -176,6 +193,10 @@ Hotel Sidebar
 		margin-top: -1px;
 		background: #fffedd;
 
+		@include xs-down {
+			display: none;
+		}
+
 		&:before {
 			content: '';
 			position: absolute;
@@ -236,97 +257,92 @@ Hotel Sidebar
 
 }
 
-@-webkit-keyframes loading {
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 51%
-	}
-	100% {
-		background-position: 0% 50%
-	}
-}
 
-@keyframes loading {
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 51%
-	}
-	100% {
-		background-position: 0% 50%
-	}
-}
+.total-price-mobile {
+	position: sticky;
+	bottom: 0;
+	z-index: 10;
+	background: #fff;
+	border-top: 1px solid #e0e0e0;
+	margin-top: -1px;
+	background: #fffedd;
+	padding: 10px 15px 8px;
+	margin-left: -15px;
+	margin-right: -15px;
+	font-size: 11px;
+	line-height: 1.2;
 
-$spinner-size: 2.5em;
-
-.spinner {
-
-	font-size: 2px;
-	display: inline-block;
-	position: relative;
-	color: #ffffff;
-	margin: $spinner-size * -1 auto auto auto;
-	text-indent: -9999em;
-	transform: translateZ(0);
-	animation-delay: -0.16s;
-
-	&,
-	&:before,
-	&:after {
-		border-radius: 50%;
-		width: $spinner-size;
-		height: $spinner-size;
-		animation-fill-mode: both;
-		animation: spinner 1.8s infinite ease-in-out;
+	@include xs-up {
+		display: none;
 	}
 
-	&:before,
-	&:after {
+	&:before {
 		content: '';
 		position: absolute;
+		z-index: 10;
+		top: 0;
+		left: 0;
+		height: 1px;
+		width: 100%;
+		background: url('/assets/img/top.png') no-repeat center;
+		background-size: 100% 3px;
 	}
-	&:before {
-		left: $spinner-size * -1.5;
-		animation-delay: -0.32s;
+
+	.total-price-recap {
+		border-top: 1px solid rgba(0, 0, 0, .1);
+		padding-top: 8px;
+		margin-top: 8px;
+		display: flex;
+		justify-content: space-between;
 	}
-	&:after {
-		left: $spinner-size * 1.5;
+
+	.prices {
+		width: 50%;
+		flex: 1 1 50%;
+		display: flex;
+		justify-content: space-between;
+
+		&>div {
+			width: 50%;
+			flex: 1 0 50%;
+			padding-right: 10px;
+
+			span {
+				text-transform: uppercase;
+				font-size: 8px;
+				display: block;
+			}
+
+			strong {
+				font-size: 16px;
+			}
+		}
+
+		.price-pp {
+			color: $primary-color;
+		}
+	}
+
+	.recap-cta {
+		width: 50%;
+		flex: 1 1 50%;
+
+		.btn {
+			width: 100%;
+			padding-top: 11px;
+			padding-bottom: 11px;
+			text-align: center;
+			font-size: 13px;
+		}
 	}
 }
 
-@-webkit-keyframes spinner {
-	0%,
-	80%,
-	100% {
-		box-shadow: 0 $spinner-size 0 $spinner-size * -0.5;
-	}
-	40% {
-		box-shadow: 0 $spinner-size 0 0;
-	}
-}
-
-@keyframes spinner {
-	0%,
-	80%,
-	100% {
-		box-shadow: 0 $spinner-size 0 $spinner-size * -0.5;
-	}
-	40% {
-		box-shadow: 0 $spinner-size 0 0;
-	}
-}
 
 /*--------------------------------------------------
 Hotel Main Content
 --------------------------------------------------*/
 
 .hotel-main-content {
-	flex-grow: 1;
-	flex-basis: calc(100% - 310px);
-	max-width: calc(100% - 310px);
 	padding: 0 15px;
 }
 
@@ -555,5 +571,91 @@ Hotel Desc
 			right: 0;
 			padding-right: 0;
 		}
+	}
+}
+
+
+
+
+@-webkit-keyframes loading {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 51%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+@keyframes loading {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 51%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+$spinner-size: 2.5em;
+
+.spinner {
+
+	font-size: 2px;
+	display: inline-block;
+	position: relative;
+	color: #ffffff;
+	margin: $spinner-size * -1 auto auto auto;
+	text-indent: -9999em;
+	transform: translateZ(0);
+	animation-delay: -0.16s;
+
+	&,
+	&:before,
+	&:after {
+		border-radius: 50%;
+		width: $spinner-size;
+		height: $spinner-size;
+		animation-fill-mode: both;
+		animation: spinner 1.8s infinite ease-in-out;
+	}
+
+	&:before,
+	&:after {
+		content: '';
+		position: absolute;
+	}
+	&:before {
+		left: $spinner-size * -1.5;
+		animation-delay: -0.32s;
+	}
+	&:after {
+		left: $spinner-size * 1.5;
+	}
+}
+
+@-webkit-keyframes spinner {
+	0%,
+	80%,
+	100% {
+		box-shadow: 0 $spinner-size 0 $spinner-size * -0.5;
+	}
+	40% {
+		box-shadow: 0 $spinner-size 0 0;
+	}
+}
+
+@keyframes spinner {
+	0%,
+	80%,
+	100% {
+		box-shadow: 0 $spinner-size 0 $spinner-size * -0.5;
+	}
+	40% {
+		box-shadow: 0 $spinner-size 0 0;
 	}
 }
