--- a/src/app/pages/hotel/hotel-datepicker.component.html
+++ b/src/app/pages/hotel/hotel-datepicker.component.html
@@ -1,11 +1,20 @@
-<div class="hotel-datepicker" (clickOutside)="active = false">
+<div class="hotel-datepicker">
+	<!--  (clickOutside)="active = false" -->
 	<div class="edit-row">
 		<div class="edit-name">
 			<input class="with-reset" disabled type="text" placeholder="Seleziona una data" [value]="ngModel | date:'dd MMMM yyyy'">
 		</div>
-		<button class="edit-btn" (click)="active = true" *ngIf="!disabled">modifica</button>
+		<button class="edit-btn" (click)="active = !active" *ngIf="!disabled">modifica</button>
 	</div>
 	<div class="calendar popup-calendar" *ngIf="active && !disabled">
-		<p-calendar name="startDate" (onSelect)="onSelect($event)" (onMonthChange)="onMonthChange($event)" [(ngModel)]="ngModel" [disabledDates]="disabledDates" [inline]="true" [monthNavigator]="true" [yearNavigator]="true" [yearRange]="calendar.minYear + ':' + calendar.maxYear" [minDate]="minDate" [maxDate]="maxDate" [locale]="calendar.it" dateFormat="dd/mm/yy"></p-calendar>
+		<p-calendar name="startDate" (onSelect)="onSelect($event); active = false;" (onMonthChange)="onMonthChange($event)" [(ngModel)]="ngModel" [disabledDates]="disabledDates" [inline]="true" [monthNavigator]="true" [yearNavigator]="true" [yearRange]="calendar.minYear + ':' + calendar.maxYear" [minDate]="minDate" [maxDate]="maxDate" [locale]="calendar.it" dateFormat="dd/mm/yy">
+			<ng-template pTemplate="date" let-date>
+				<span [ngClass]="getDateClass(date)">{{date.day}}</span>
+			</ng-template>
+		</p-calendar>
+		<div class="popup-calendar--legend">
+			<div><span class="ico available"></span> Data disponibile</div>
+			<div><span class="ico hurry-up"></span> Ancora pochi posti, affrettati</div>
+		</div>
 	</div>
 </div>
