--- a/src/app/pages/hotel/hotel.component.scss
+++ b/src/app/pages/hotel/hotel.component.scss
@@ -44,6 +44,11 @@ Hotel Sidebar
 		padding-right: 15px;
 		z-index: 10;
 
+		@include xs-down {
+			padding-right: 0;
+			width: 100%;
+		}
+
 		&::-webkit-scrollbar {
 			width: 3px;
 		}
@@ -56,8 +61,10 @@ Hotel Sidebar
 			background: #d8d8d8;
 		}
 
+		&>.sidebar-group:first-child {
+			border-top: none;
+		}
 	}
-
 
 	@include xs-down {
 		position: relative;
@@ -65,18 +72,36 @@ Hotel Sidebar
 		left: auto;
 		padding: 0;
 		width: 100%;
+		background: #fafafa;
+		margin: 10px -15px 30px;
+		width: auto;
+		border-top: 1px solid #ccc;
+		border-bottom: 1px solid #ccc;
 	}
 
-
 	.sidebar-group {
-		padding: 10px;
-		border-bottom: 1px solid $border-color;
+		padding: 10px 0;
+		border-top: 1px solid $border-color;
 		font-size: 13px;
 		line-height: 1.2;
 
+
 		@include xs-down {
-			padding-left: 0;
-			padding-right: 0;
+			padding: 15px;
+
+			.custom-select {
+				margin-bottom: 0;
+
+				&:before {
+					top: 16px !important;
+					right: 13px !important;
+				}
+
+				select {
+					padding: 10px 25px 10px 12px !important;
+					background: #fff !important;
+				}
+			}
 		}
 
 		.tit {
@@ -126,6 +151,10 @@ Hotel Sidebar
 					margin-bottom: 0;
 				}
 			}
+		}
+
+		.custom-select {
+			margin-bottom: 5px;
 		}
 
 		.spinner-input {
@@ -190,8 +219,13 @@ Hotel Sidebar
 		z-index: 10;
 		background: #fff;
 		border-top: 1px solid #e0e0e0;
-		margin-top: -1px;
+		margin-top: 20px;
 		background: #fffedd;
+		margin-left: -10px;
+		margin-right: -10px;
+		padding-left: 10px;
+		padding-right: 10px;
+		padding-bottom: 10px;
 
 		@include xs-down {
 			display: none;
@@ -203,8 +237,10 @@ Hotel Sidebar
 			z-index: 10;
 			top: 0;
 			left: 0;
+			right: 0;
 			height: 1px;
-			width: 100%;
+			width: auto;
+			display: block;
 			background: url('/assets/img/top.png') no-repeat center;
 			background-size: 100% 3px;
 		}
@@ -212,8 +248,6 @@ Hotel Sidebar
 
 	.sidebar-cta {
 		margin-top: -1px;
-		margin-left: 10px;
-		margin-right: 10px;
 
 		.btn {
 			display: block;
@@ -276,7 +310,8 @@ Hotel Sidebar
 		display: none;
 	}
 
-	&:before {
+	&:before,
+	&:after {
 		content: '';
 		position: absolute;
 		z-index: 10;
@@ -286,6 +321,11 @@ Hotel Sidebar
 		width: 100%;
 		background: url('/assets/img/top.png') no-repeat center;
 		background-size: 100% 3px;
+	}
+
+	&:after {
+		top: auto;
+		bottom: -1px;
 	}
 
 	.total-price-recap {
