--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<google-tag-manager></google-tag-manager>
 <div class="wrapper">
 	<section-header></section-header>
 	<app-logger></app-logger>
@@ -6,4 +7,4 @@
 	<section-footer></section-footer>
 	<section-svg></section-svg>
 </div>
-<modal-component>modal component</modal-component>
+<modal-component></modal-component>
