--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -44,6 +44,12 @@ img {
 	margin: 0 0 60px;
 }
 
+svg {
+	width: 20px;
+	height: 20px;
+	fill: #eee;
+}
+
 
 /*--------------------------------------------------
 Card Row
